Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- The user search no longer displays users that have no calendar.
  This solves Mantis bug #804. 
- Searching when creating members no longer clear the attendee list.
  This solves Mantis bug #805.
- Fixed Mantis bug #653: Searching for dates with start date after 
  end date caused an error message.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-